--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="image-blurb">
           <img src="./images/location.jpg">
           <h3>City Tech campus</h3>
-          <p>Downtown Brooklyn</p>
+          <p>downtown Brooklyn</p>
         </div>
       </div>
       <div class="mail-signup">
