--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <li>High school diploma or GED</li>
             <li>At least 18 years old</li>
             <li>Less than a 4-year degree</li>
-            <li>Under or unemployed *</li>
+            <li>Unemployed or underemployed *</li>
             <li>NYC resident</li>
             <li>Legally allowed to work in the U.S.</li>
             <li>Able to commit to full time training (minimum 40 hours per week)</li>
