Word changes and logo enlargement

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Job Academy</title>
+    <title>Tech Jobs Academy</title>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
     <script src="./javascript/main.js" type="text/javascript" charset="utf-8"></script>
     <link href="./stylesheets/style.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     <header>
       <div class="nav-bar">
         <div class="logo">
-          <a href="#home" class="moveTo" title="TJA"><p>TJH | Tech Jobs Academy</p></a>
+          <a href="#home" class="moveTo" title="TJA"><p>TJA | Tech Jobs Academy</p></a>
         </div>
         <nav>
           <ul>
@@ -28,19 +28,16 @@
         <div class="hero-blurb">
           <h1>Tech Jobs Academy</h1>
           <p>An intensive, 16-week technical training program preparing
-            underemployed and unemployed New Yorkers for in-demand tech jobs.</p>
+            underemployed and unemployed New Yorkers for in-demand tech jobs in cloud and server administration.</p>
           <button class="long-button"><a href="#" title="APPLY">APPLY</a></button>
         </div>
       </div>
     </header>
     <section class="overview" id="overview">
       <h2>OVERVIEW</h2>
-      <p>Tech Jobs Academy is a public-private partnership between Microsoft,
-        New York City College of Technology/CUNY, and the NYC Tech Talent Pipeline. This technical
-        training program targets underemployed and unemployed New Yorkers who
-      are passionate about technology and ready to launch a new career in tech.</p>
+      <p>Tech Jobs Academy is a collaboration between Microsoft, the NYC Tech Talent Pipeline, and the City University of New York. In its pilot year, these partners have joined together to launch TJA within CUNY’s New York City College of Technology. This technical training program targets underemployed and unemployed New Yorkers who are passionate about technology and ready to launch a new career in tech.</p>
       <p>Students will spend 16 weeks developing highly sought-after skills in
-        cloud and server administration, as well as building career development skills
+        cloud and server administration, as well as building career development  professional skills
       to help them land a job upon program completion. This pilot program will
       serve twenty-five motivated New York City residents.</p><p>Applications will be reviewed on a
     rolling basis. Apply today!</p>
@@ -57,8 +54,8 @@
         </div>
         <div class="image-blurb">
           <div class="icon"><span class="dollar">$</span>0</div>
-          <h3>free</h3>
-          <p>tuition</p>
+          <h3>tuition</h3>
+          <p>at no cost</p>
         </div>
         <div class="image-blurb">
           <img src="./images/location.jpg">
@@ -123,7 +120,7 @@
           <ol>
             <li>
               <h3>Check your eligibility</h3>
-              <p>Do you meet our eligibility criteria? You'll be asked to present proof of eligibility (tax returns to verify income), so make sure you qualify.</p>
+              <p>Do you meet our eligibility criteria? You'll be asked to present proof of eligibility (including tax returns to verify income), so make sure you qualify.</p>
             </li>
             <li>
               <h3>Fill out application form</h3>
@@ -135,7 +132,7 @@
             </li>
             <li>
               <h3>Take math and reading test</h3>
-              <p>Take an assessment to show your math skills (11<sup>th</sup> grade level on TABE test) and reading proficiency (10<sup>th</sup> grade level on TABE test).</p>
+              <p>Take an assessment to show your math skills (at least 11<sup>th</sup> grade level on TABE test) and reading proficiency (at least 10<sup>th</sup> grade level on TABE test)</p>
             </li>
             <li>
               <h3>Interview</h3>
