New and improved timeline

--- a/index.html
+++ b/index.html
@@ -172,24 +172,68 @@
           </div>
         </div>
         <div class="key-date" id="dot1">
-          <h3>Application Opens</h3>
-          <span></span>
+          <div class="callout">
+            <h3>Application Opens</h3>
+            <b class="notch"></b>
+          </div>
           <h4>AUGUST 10</h4>
+          <span></span>
         </div>
         <div class="key-date" id="dot2">
-          <h3>Info Session</h3>
-          <span></span>
-          <h4>AUGUST 15</h4>
+          <div class="callout">
+            <h3>Info Session</h3>
+            <b class="notch"></b>
+          </div>
+            <h4>AUGUST 15</h4>
+            <span></span>
         </div>
         <div class="key-date" id="dot3">
-          <h3>Application Closes</h3>
-          <span></span>
+          <div class="callout">
+            <h3>Application Closes</h3>
+            <b class="notch"></b>
+          </div>
           <h4>AUGUST 28</h4>
+          <span></span>
         </div>
         <div class="key-date" id="dot4">
-          <h3>Class Starts</h3>
-          <span></span>
+          <div class="callout">
+            <h3>Class Starts</h3>
+            <b class="notch"></b>
+          </div>
           <h4>OCTOBER 26</h4>
+          <span></span>
+        </div>
+          <div class="key-date" id="dot5">
+            <div class="callout">
+            <h3>Beyonce</h3>
+            <b class="notch"></b>
+          </div>
+          <h4>OCTOBER 22</h4>
+          <span></span>
+        </div>
+          <div class="key-date" id="dot6">
+            <div class="callout">
+            <h3>Nicki Minaj</h3>
+            <b class="notch"></b>
+          </div>
+          <h4>OCTOBER 23</h4>
+          <span></span>
+        </div>
+        <div class="key-date" id="dot7">
+          <div class="callout">
+            <h3>Drake</h3>
+            <b class="notch"></b>
+          </div>
+          <h4>OCTOBER 24</h4>
+          <span></span>
+        </div>
+          <div class="key-date" id="dot8">
+            <div class="callout">
+              <h3>Taylor Swift</h3>
+              <b class="notch"></b>
+            </div>
+          <h4>OCTOBER 25</h4>
+          <span></span>
         </div>
       </div>
     </section>
@@ -200,7 +244,7 @@
         <a href="http://www.citytech.cuny.edu" target="_blank" title="New York
           City College of Technology/CUNY"><img src="./images/cuny.jpg.png"></a>
         <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC
-          Tech Talent Pipeline"><img src="./images/ttp_logo.png"</a>
+          Tech Talent Pipeline"><img src="./images/ttp_logo.jpg.png"</a>
       </div>
     </footer>
     <section class="footer" id="footer">
