larger ttp logo

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <a href="http://www.citytech.cuny.edu" target="_blank" title="New York
           City College of Technology/CUNY"><img src="./images/cuny.jpg.png"></a>
         <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC
-          Tech Talent Pipeline"><img src="./images/ttp_logo.png"</a>
+          Tech Talent Pipeline"><img src="./images/ttp_logo.jpg.png"</a>
       </div>
     </footer>
     <section class="footer" id="footer">
