More edits and rearrangements to timeline

--- a/index.html
+++ b/index.html
@@ -189,50 +189,50 @@
         </div>
         <div class="key-date" id="dot3">
           <div class="callout">
+            <h3>Info Session</h3>
+            <b class="notch"></b>
+          </div>
+          <h4>AUGUST 22</h4>
+          <span></span>
+        </div>
+       <!--  <div class="key-date" id="dot4">
+          <div class="callout">
+            <h3>LOL</h3>
+            <b class="notch"></b>
+          </div>
+          <h4>August 28</h4>
+          <span></span>
+        </div>
+        <div class="key-date" id="dot5">
+            <div class="callout">
+            <h3>LOL</h3>
+            <b class="notch"></b>
+          </div>
+          <h4>OCTOBER 12</h4>
+          <span></span>
+        </div> -->
+          <div class="key-date" id="dot6">
+            <div class="callout">
             <h3>Application Closes</h3>
             <b class="notch"></b>
           </div>
           <h4>AUGUST 28</h4>
           <span></span>
         </div>
-        <div class="key-date" id="dot4">
-          <div class="callout">
-            <h3>Class Starts</h3>
-            <b class="notch"></b>
-          </div>
-          <h4>OCTOBER 26</h4>
-          <span></span>
-        </div>
-          <div class="key-date" id="dot5">
-            <div class="callout">
-            <h3>Beyonce</h3>
-            <b class="notch"></b>
-          </div>
-          <h4>OCTOBER 22</h4>
-          <span></span>
-        </div>
-          <div class="key-date" id="dot6">
-            <div class="callout">
-            <h3>Nicki Minaj</h3>
-            <b class="notch"></b>
-          </div>
-          <h4>OCTOBER 23</h4>
-          <span></span>
-        </div>
         <div class="key-date" id="dot7">
           <div class="callout">
-            <h3>Drake</h3>
+            <h3>Invites Sent</h3>
             <b class="notch"></b>
           </div>
-          <h4>OCTOBER 24</h4>
+          <h4>OCTOBER 12</h4>
           <span></span>
         </div>
           <div class="key-date" id="dot8">
             <div class="callout">
-              <h3>Taylor Swift</h3>
+              <h3>Class Begins</h3>
               <b class="notch"></b>
             </div>
-          <h4>OCTOBER 25</h4>
+          <h4>OCTOBER 26</h4>
           <span></span>
         </div>
       </div>
