fixes loose img tag

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <div class="partner-logos">
         <a href="http://www.microsoft.com" target="_blank" title="Microsoft"><img src="./images/msr.jpg"></a>
         <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC
-          Tech Talent Pipeline"><img src="./images/ttp_logo.jpg.png"</a>
+          Tech Talent Pipeline"><img src="./images/ttp_logo.jpg.png"></a>
         <a href="http://www.citytech.cuny.edu" target="_blank" title="New York
           City College of Technology/CUNY"><img src="./images/cuny.jpg.png"></a>
       </div>
