Adds new paragraphs

--- a/index.html
+++ b/index.html
@@ -35,11 +35,8 @@
     </header>
     <section class="overview" id="overview">
       <h2>OVERVIEW</h2>
-      <p>Tech Jobs Academy is a collaboration between Microsoft, the NYC Tech Talent Pipeline, and the City University of New York. In its pilot year, these partners have joined together to launch TJA within CUNY’s New York City College of Technology. This technical training program targets underemployed and unemployed New Yorkers who are passionate about technology and ready to launch a new career in tech.</p>
-      <p>Students will spend 16 weeks developing highly sought-after skills in
-        cloud and server administration, as well as building career development  professional skills
-      to help them land a job upon program completion. This pilot program will
-      serve twenty-five motivated New York City residents.</p><p>Applications will be reviewed on a
+      <p>Tech Jobs Academy (TJA) is a collaboration between Microsoft Corporation, the NYC Tech Talent Pipeline and the City University of New York (CUNY). In its pilot year, these partners have joined together to launch TJA within CUNY’s New York City College of Technology, a technical training program that targets underemployed and unemployed New Yorkers who are passionate about technology and ready to launch a new career in the field.</p>
+      <p>TJA students will spend 16 weeks developing highly sought-after skills in cloud and server administration, as well as building career development professional skills to help them land a job upon program completion. This pilot program will serve twenty-five motivated New York City residents.</p><p>Applications will be reviewed on a
     rolling basis. Apply today!</p>
       <div class="curriculum-blurbs">
         <div class="image-blurb">
