Removes refernces to TJA

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="nav-bar">
         <div class="logo">
-          <a href="#home" class="moveTo" title="TJA"><p>TJA | Tech Jobs Academy</p></a>
+          <a href="#home" class="moveTo" title="TJA"><p>Tech Jobs Academy</p></a>
         </div>
         <nav>
           <button class="c-hamburger c-hamburger--rot" id="hamburger">
@@ -40,8 +40,8 @@
     </header>
     <section class="overview" id="overview">
       <h2>OVERVIEW</h2>
-      <p>Tech Jobs Academy (TJA) is a collaboration between Microsoft Corporation, the NYC Tech Talent Pipeline and the City University of New York (CUNY). In its pilot year, these partners have joined together to launch TJA within CUNY’s New York City College of Technology, a technical training program that targets underemployed and unemployed New Yorkers who are passionate about technology and ready to launch a new career in the field.</p>
-      <p>TJA students will spend 16 weeks developing highly sought-after skills in cloud and server administration, as well as building career development professional skills to help them land a job upon program completion. This pilot program will serve twenty-five motivated New York City residents.</p><p>Applications will be reviewed on a
+      <p>Tech Jobs Academy is a collaboration between Microsoft Corporation, the NYC Tech Talent Pipeline and the City University of New York (CUNY). In its pilot year, these partners have joined together to launch Tech Jobs Academy within CUNY’s New York City College of Technology, a technical training program that targets underemployed and unemployed New Yorkers who are passionate about technology and ready to launch a new career in the field.</p>
+      <p>Tech Jobs Academy students will spend 16 weeks developing highly sought-after skills in cloud and server administration, as well as building career development professional skills to help them land a job upon program completion. This pilot program will serve twenty-five motivated New York City residents.</p><p>Applications will be reviewed on a
     rolling basis. Apply today!</p>
       <div class="curriculum-blurbs">
         <div class="image-blurb">
