Adds missing links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
           <h1>Tech Jobs Academy</h1>
           <p>An intensive, 16-week technical training program preparing
             underemployed and unemployed New Yorkers for in-demand tech jobs in cloud and server administration.</p>
-          <button class="long-button"><a href="#" title="APPLY">APPLY</a></button>
+          <button class="long-button"><a
+              href="https://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/new"
+              title="APPLY" target="_blank">APPLY</a></button>
         </div>
       </div>
     </header>
@@ -158,7 +160,9 @@
             <p>* less than $50K annual salary (individual)</p>
           </ul>
           <div class="apply-button">
-            <button class="long-button"><a href="#" title="APPLY">APPLY</a></button> 
+            <button class="long-button"><a
+                href="https://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/new"
+                title="APPLY" target="_blank">APPLY</a></button>
           </div>
         </div>
       </div>
@@ -242,19 +246,19 @@
     <footer>
       <h2>PARTNERS</h2>
       <div class="partner-logos">
-        <a href="http://www.microsoft.com" target="_blank" title="Microsoft"><img src="./images/msr.jpg"></a>
-        <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC
-          Tech Talent Pipeline"><img src="./images/ttp_logo.jpg.png"></a>
         <a href="http://www.citytech.cuny.edu" target="_blank" title="New York
-          City College of Technology/CUNY"><img src="./images/cuny.jpg.png"></a>
+          City College of Technology/CUNY"><img src="./images/cuny.jpg"></a>
+        <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC
+          Tech Talent Pipeline"><img src="./images/ttp_logo.png"</a>
+        <a href="http://www.microsoft.com" target="_blank" title="Microsoft"><img src="./images/msr.jpg"></a>
       </div>
     </footer>
     <section class="footer" id="footer">
        <nav>
           <ul>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="mailto:name@email.com">Contact</a></li>
+            <li><a href="http://www1.nyc.gov/home/privacy-policy.page" target="_blank">Privacy</a></li>
+            <li><a href="http://www1.nyc.gov/home/terms-of-use.page" target="_blank">Terms & Conditions</a></li>
+            <li><a href="mailto:v-syitb@microsoft.com">Contact</a></li>
           </ul>
         </nav>
     </section>
