--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li><a href="#curriculum" class="moveTo" title="CURRICULUM">CURRICULUM</a></li>
               <li><a href="#application" class="moveTo" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
               <li><a href="#key-dates" class="moveTo" title="KEY DATES">KEY DATES</a></li>
-            </ul>          
+            </ul>
           </div>
         </nav>
       </div>
@@ -34,9 +34,14 @@
           <h1>Tech Jobs Academy</h1>
           <p>An intensive, 16-week technical training program preparing
             underemployed and unemployed New Yorkers for in-demand tech jobs in cloud and server administration.</p>
-          <button class="long-button"><a
-              href="https://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/new"
-              title="APPLY" target="_blank">APPLY</a></button>
+          <a
+            href="https://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/new"
+            title="APPLY" target="_blank">
+            <button class="long-button"
+              href="https://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/newhttps://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/new">
+              APPLY
+            </button>
+          </a>
         </div>
       </div>
     </header>
@@ -44,7 +49,9 @@
       <h2>OVERVIEW</h2>
       <p>Tech Jobs Academy is a collaboration between Microsoft Corporation, the NYC Tech Talent Pipeline and the City University of New York (CUNY). In its pilot year, these partners have joined together to launch Tech Jobs Academy within CUNY’s New York City College of Technology, a technical training program that targets underemployed and unemployed New Yorkers who are passionate about technology and ready to launch a new career in the field.</p>
       <p>Tech Jobs Academy students will spend 16 weeks developing highly sought-after skills in cloud and server administration, as well as building career development professional skills to help them land a job upon program completion. This pilot program will serve twenty-five motivated New York City residents.</p><p>Applications will be reviewed on a
-    rolling basis. Apply today!</p>
+        rolling basis. <a
+          href="https://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/new"
+          target="_blank">Apply today!</a></p>
       <div class="curriculum-blurbs">
         <div class="image-blurb">
           <img src="./images/calendar.jpg">
@@ -160,9 +167,12 @@
             <p>* less than $50K annual salary (individual)</p>
           </ul>
           <div class="apply-button">
-            <button class="long-button"><a
-                href="https://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/new"
-                title="APPLY" target="_blank">APPLY</a></button>
+            <a href="https://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/new"
+              title="APPLY" target="_blank">
+              <button class="long-button">
+                APPLY
+              </button>
+            </a>
           </div>
         </div>
       </div>
@@ -190,8 +200,8 @@
             <h3>Info Session</h3>
             <b class="notch"></b>
           </div>
-            <h4>AUGUST 15</h4>
-            <span></span>
+          <h4>AUGUST 15</h4>
+          <span></span>
         </div>
         <div class="key-date" id="dot3">
           <div class="callout">
@@ -201,7 +211,7 @@
           <h4>AUGUST 22</h4>
           <span></span>
         </div>
-       <!--  <div class="key-date" id="dot4">
+        <!--  <div class="key-date" id="dot4">
           <div class="callout">
             <h3>LOL</h3>
             <b class="notch"></b>
@@ -210,15 +220,15 @@
           <span></span>
         </div>
         <div class="key-date" id="dot5">
-            <div class="callout">
+          <div class="callout">
             <h3>LOL</h3>
             <b class="notch"></b>
           </div>
           <h4>OCTOBER 12</h4>
           <span></span>
         </div> -->
-          <div class="key-date" id="dot6">
-            <div class="callout">
+        <div class="key-date" id="dot6">
+          <div class="callout">
             <h3>Application Closes</h3>
             <b class="notch"></b>
           </div>
@@ -233,11 +243,11 @@
           <h4>OCTOBER 12</h4>
           <span></span>
         </div>
-          <div class="key-date" id="dot8">
-            <div class="callout">
-              <h3>Class Begins</h3>
-              <b class="notch"></b>
-            </div>
+        <div class="key-date" id="dot8">
+          <div class="callout">
+            <h3>Class Begins</h3>
+            <b class="notch"></b>
+          </div>
           <h4>OCTOBER 26</h4>
           <span></span>
         </div>
@@ -247,20 +257,20 @@
       <h2>PARTNERS</h2>
       <div class="partner-logos">
         <a href="http://www.citytech.cuny.edu" target="_blank" title="New York
-          City College of Technology/CUNY"><img src="./images/cuny.jpg"></a>
+          City College of Technology/CUNY"><img src="./images/cuny-black.jpg"></a>
         <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC
           Tech Talent Pipeline"><img src="./images/ttp_logo.png"</a>
         <a href="http://www.microsoft.com" target="_blank" title="Microsoft"><img src="./images/msr.jpg"></a>
       </div>
     </footer>
     <section class="footer" id="footer">
-       <nav>
-          <ul>
-            <li><a href="http://www1.nyc.gov/home/privacy-policy.page" target="_blank">Privacy</a></li>
-            <li><a href="http://www1.nyc.gov/home/terms-of-use.page" target="_blank">Terms & Conditions</a></li>
-            <li><a href="mailto:v-syitb@microsoft.com">Contact</a></li>
-          </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="http://www1.nyc.gov/home/privacy-policy.page" target="_blank">Privacy</a></li>
+          <li><a href="http://www1.nyc.gov/home/terms-of-use.page" target="_blank">Terms & Conditions</a></li>
+          <li><a href="mailto:v-syitb@microsoft.com">Contact</a></li>
+        </ul>
+      </nav>
     </section>
   </body>
 </html>
