Makes John's content changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
     <section class="overview" id="overview">
       <h2>OVERVIEW</h2>
       <p>Tech Jobs Academy is a collaboration between Microsoft Corporation, the NYC Tech Talent Pipeline and the City University of New York (CUNY). In its pilot year, these partners have joined together to launch Tech Jobs Academy within CUNY’s New York City College of Technology, a technical training program that targets underemployed and unemployed New Yorkers who are passionate about technology and ready to launch a new career in the field.</p>
-      <p>Tech Jobs Academy students will spend 16 weeks developing highly sought-after skills in cloud and server administration, as well as building career development professional skills to help them land a job upon program completion. This pilot program will serve twenty-five motivated New York City residents.</p><p>Applications will be reviewed on a
+      <p>Tech Jobs Academy students will spend 16 weeks developing highly
+        sought-after skills in cloud and server administration, as well as
+        building professional skills to help them land a job upon completion.
+        This pilot program will serve twenty-five motivated New Yorkers.</p><p>Applications will be reviewed on a
         rolling basis. <a
           href="https://tech-jobs-academy.forms.fm/tech-jobs-academy/responses/new"
           target="_blank">Apply today!</a></p>
@@ -232,7 +235,7 @@
             <h3>Application Closes</h3>
             <b class="notch"></b>
           </div>
-          <h4>AUGUST 28</h4>
+          <h4>SEPTEMBER</h4>
           <span></span>
         </div>
         <div class="key-date" id="dot7">
@@ -248,7 +251,7 @@
             <h3>Class Begins</h3>
             <b class="notch"></b>
           </div>
-          <h4>OCTOBER 26</h4>
+          <h4>DECEMBER 7</h4>
           <span></span>
         </div>
       </div>
